--- a/app/src/main/res/layout/fragment_add_habit.xml
+++ b/app/src/main/res/layout/fragment_add_habit.xml
@@ -15,7 +15,6 @@
         android:layout_height="25dp"
         android:background="@drawable/back"
         android:paddingBottom="10dp"
-
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -94,7 +93,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/add_description_ed" />
-
 
         <TextView
             android:layout_width="wrap_content"
@@ -287,9 +285,7 @@
             android:layout_gravity="center"
             android:indeterminate="true"
             android:indeterminateTint="@color/colorPrimary"
-            android:indeterminateTintMode="src_atop"
-
-             />
+            android:indeterminateTintMode="src_atop" />
 
     </FrameLayout>
 
