--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#f1935c</color>
-    <color name="colorPrimaryDark">#90303d</color>
+    <color name="colorPrimaryDark">#ba6b57</color>
     <color name="colorAccent">#FFF</color>
     <color name="button_disable">#fed39f</color>
     <color name="button_enabled">#f1935c</color>
-    <color name="button_color">#90303d</color>
+    <color name="button_color">#b7472a</color>
     <color name="colorTransparent">#00ffffff</color>
     <color name="background">#ECF0F1</color>
     <color name="nav_primary">#95A5A6</color>
