--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -30,7 +30,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="200dp"
             android:background="@color/colorPrimary"
             android:orientation="vertical"
             android:paddingBottom="@dimen/card_margin"
@@ -59,7 +59,6 @@
 
             </RelativeLayout>
 
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -71,7 +70,6 @@
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/profile_name"
                 android:textStyle="bold" />
-
 
         </LinearLayout>
 
@@ -88,7 +86,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
-
                 android:orientation="vertical">
 
                 <TextView
@@ -102,7 +99,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Profile"
+                    android:text="@string/in_proces"
                     android:textSize="@dimen/text_size" />
 
             </LinearLayout>
@@ -112,7 +109,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
-
                 android:orientation="vertical">
 
                 <TextView
@@ -125,7 +121,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Profile"
+                    android:text="@string/terminate"
                     android:textSize="@dimen/text_size" />
 
             </LinearLayout>
@@ -143,12 +139,13 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-condensed"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="@dimen/text_size" />
+                    android:textSize="24dp" />
 
                 <TextView
+                    android:id="@+id/logout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Profile"
+                    android:text="@string/logout"
                     android:textSize="@dimen/text_size" />
 
             </LinearLayout>
