--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,4 +22,5 @@
     <dimen name="profile_about">13dp</dimen>
     <dimen name="profile_meta">24dp</dimen>
     <dimen name="profile_meta_label">10dp</dimen>
+    <dimen name="tab_height">10dp</dimen>
 </resources>
