--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -2,118 +2,118 @@
 <layout xmlns:bind="http://schemas.android.com/apk/res/android">
 
     <data>
-
         <variable
             name="user"
             type="com.example.halward.model.User" />
     </data>
 
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/profile_fragment"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="15dp"
-    android:focusableInTouchMode="true"
-    tools:context=".profilePage.ProfileFragment">
-
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/app_profile_bar"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/profile_fragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:layout_height="match_parent"
+        android:layout_margin="15dp"
+        android:focusableInTouchMode="true"
+        android:layout_centerHorizontal="true"
+        tools:context=".profilePage.ProfileFragment">
 
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/collapsing_profile_toolbar"
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/app_profile_bar"
             android:layout_width="match_parent"
-            android:layout_height="220dp"
+            android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
-            app:contentScrim="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:statusBarScrim="@android:color/transparent">
+            android:layout_centerHorizontal="true"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-            <LinearLayout
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:id="@+id/collapsing_profile_toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:background="@color/colorPrimary"
-                android:orientation="vertical"
-                android:paddingBottom="@dimen/card_margin"
-                android:paddingTop="@dimen/card_margin">
+                android:layout_height="220dp"
+                android:fitsSystemWindows="true"
+                android:textAlignment="center"
+                android:layout_centerHorizontal="true"
+                app:contentScrim="?attr/colorPrimary"
+                app:expandedTitleGravity="center_horizontal|bottom"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
+                app:statusBarScrim="@android:color/transparent">
 
-                <RelativeLayout
-                    android:layout_width="@dimen/profile_image"
-                    android:layout_height="@dimen/profile_image"
-                    android:layout_marginTop="39dp"
-                    android:layout_gravity="center">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:background="@color/colorPrimary"
+                    android:orientation="vertical"
+                    android:paddingTop="@dimen/card_margin"
+                    android:paddingBottom="@dimen/card_margin">
 
-                    <ImageView
-                        android:id="@+id/profile_image"
+                    <RelativeLayout
                         android:layout_width="@dimen/profile_image"
                         android:layout_height="@dimen/profile_image"
-                        android:layout_centerHorizontal="true"
-                        bind:imageUrl="@{user.photo}" />
+                        android:layout_gravity="center"
+                        android:layout_marginTop="39dp">
 
-                    <com.google.android.material.floatingactionbutton.FloatingActionButton
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentBottom="true"
-                        android:layout_alignParentRight="true"
-                        android:src="@drawable/nav_add"
-                        app:fabCustomSize="@dimen/fab_profile" />
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/profile_image"
+                            android:layout_width="@dimen/profile_image"
+                            android:layout_height="@dimen/profile_image"
+                            android:layout_centerHorizontal="true"
+                            bind:imageUrl="@{user.photo}" />
 
-                </RelativeLayout>
+                        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:layout_alignParentBottom="true"
+                            android:src="@drawable/nav_add"
+                            app:fabCustomSize="@dimen/fab_profile" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="@dimen/dimen_8dp"
-                    android:fontFamily="sans-serif"
-                    android:letterSpacing="0.1"
-                    android:text="@{user.name}"
-                    android:textColor="@android:color/white"
-                    android:textSize="@dimen/profile_name"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-<include layout="@layout/toolbar_profile"/>
-
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/tabLayout"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:layout_alignParentBottom="true"
-                android:layout_gravity="bottom"
-                app:tabGravity="fill"
-                app:tabMode="fixed"
-                android:minHeight="?android:attr/actionBarSize"
+                    </RelativeLayout>
 
 
-                app:tabContentStart="72dp"/>
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
-    </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/viewPager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+                </LinearLayout>
 
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/scrollView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clipToPadding="false"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+                <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/toolbar_profile"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:textAlignment="center"
+                    app:titleTextAppearance="@style/Toolbar.TitleText"
+                    app:title="@{user.name}"
+                    app:layout_collapseMode="pin"
+                    app:popupTheme="@style/ThemeOverlay.AppCompat" />
 
-        <include layout="@layout/content_habit_home" />
+                <com.google.android.material.tabs.TabLayout
+                    android:id="@+id/tabLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:layout_alignParentBottom="true"
+                    android:layout_gravity="bottom"
+                    android:minHeight="?android:attr/actionBarSize"
+                    app:tabContentStart="72dp"
+                    app:tabGravity="fill"
+                    app:tabMode="fixed" />
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
+        </com.google.android.material.appbar.AppBarLayout>
 
-    </androidx.core.widget.NestedScrollView>
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/viewPager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/scrollView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+            <include layout="@layout/content_habit_home" />
+
+        </androidx.core.widget.NestedScrollView>
 
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </layout>
