--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -20,7 +20,7 @@
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/app_profile_bar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="320dp"
             android:fitsSystemWindows="true"
             android:layout_centerHorizontal="true"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
@@ -28,7 +28,7 @@
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/collapsing_profile_toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="265dp"
+                android:layout_height="wrap_content"
                 android:fitsSystemWindows="true"
                 android:textAlignment="center"
                 android:layout_centerHorizontal="true"
@@ -36,11 +36,22 @@
                 app:expandedTitleGravity="center_horizontal|bottom"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                 app:statusBarScrim="@android:color/transparent">
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/backdrop_1"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fitsSystemWindows="true"
+                    android:scaleType="centerCrop"
+                    app:layout_collapseMode="parallax" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
-                    android:background="@color/colorPrimary"
+
                     android:orientation="vertical"
                     android:paddingTop="@dimen/card_margin"
                     android:paddingBottom="@dimen/card_margin">
@@ -68,7 +79,7 @@
                     </RelativeLayout>
 
                 </LinearLayout>
-
+                </RelativeLayout>
                 <androidx.appcompat.widget.Toolbar
                     android:id="@+id/toolbar_profile"
                     android:layout_width="match_parent"
