--- a/app/src/main/res/layout/fragment_add_habit.xml
+++ b/app/src/main/res/layout/fragment_add_habit.xml
@@ -246,7 +246,7 @@
                 android:id="@+id/add_photo"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:background="@drawable/add_picture" />
+                android:background="@drawable/add_image" />
 
             <TextView
                 android:id="@+id/choose_picture"
@@ -280,6 +280,7 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_gravity="center"
+        android:layout_marginTop="272dp"
         android:indeterminate="true"
         android:indeterminateTint="@color/colorPrimary"
         android:indeterminateTintMode="src_atop"
